feat: add teaser-row component

--- a/packages/components/base/source/0-base/global/base.scss
+++ b/packages/components/base/source/0-base/global/base.scss
@@ -7,6 +7,7 @@
 @use '../2-generic/media/video' as *;
 @use '../2-generic/kbd/kbd' as *;
 @use '../2-generic/headline/headline' as *;
+@use '../2-generic/topic/topic' as *;
 @use '../2-generic/lazyload/lazyload' as *;
 
 /* critical:start */
