feat: add vars for slider

--- a/packages/components/base/source/2-molecules/slider/_glide.core.scss
+++ b/packages/components/base/source/2-molecules/slider/_glide.core.scss
@@ -1,6 +1,6 @@
 // https://github.com/glidejs/glide/blob/master/src/assets/sass/glide.core.scss
 
-.slider {
+.c-slider {
   &-main,
   &-nav {
     position: relative;
