--- a/packages/components/base/source/2-molecules/content-slide/_content-slide.scss
+++ b/packages/components/base/source/2-molecules/content-slide/_content-slide.scss
@@ -1,7 +1,6 @@
 @use '../../0-base/1-tools/scss/grid';
 @use '../../0-base/1-tools/scss/helpers';
 @use '@kickstartds/core/source/core/breakpoint';
-@use '../../0-base/0-settings/selector';
 @use 'settings/base';
 
 .content-slide {
@@ -51,12 +50,12 @@
   padding: 0.75em 1em;
   transition: 0.3s;
 
-  #{selector.$slider-nav-slide}:hover &,
-  #{selector.$slider-nav-slide}:focus & {
+  .c-slider-nav__slide:hover &,
+  .c-slider-nav__slide:focus & {
     background-color: base.$color-black-10;
   }
 
-  #{selector.$slider-nav-slide}--active & {
+  .c-slider-nav__slide--active & {
     background-color: base.$color-black-10;
     color: base.$color-brand;
   }
