--- a/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
@@ -1,10 +1,7 @@
 @use '@kickstartds/core/source/core/breakpoint';
-@use '../../../0-base/0-settings/selector';
 @use 'bourbon/core/bourbon';
-@use 'settings/base';
-@use 'settings/global';
 
-.slider__arrows {
+.c-slider__arrows {
   display: none;
   opacity: 0;
   transition: 0.3s;
@@ -13,42 +10,37 @@
     display: block;
   }
 
-  .slider:hover & {
+  .c-slider:hover & {
     opacity: 1;
   }
 }
 
-.slider__arrow {
-  $arrow-icon-size: 2.65rem;
-
+.c-slider__arrow {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
-  color: base.$color-brand;
+  color: var(--c-slider_arrow--color);
   user-select: none;
   border-radius: 3px;
-  z-index: global.$slider-arrows-zindex;
+  z-index: 100;
   transition: inherit;
 
   &:hover,
   &:focus {
-    background-color: base.$color-black-10;
+    background-color: var(--c-slider_arrow--background-hover);
   }
 
   .icon {
-    @include bourbon.size($arrow-icon-size);
+    @include bourbon.size(var(--c-slider_arrow--size));
   }
 
   &--prev {
     left: 0;
 
     [data-slider-arrows='outer'] & {
-      margin-left: -$arrow-icon-size;
-
-      #{selector.$l-main-wrap--full-gap} &,
-      #{selector.$l-main-wrap--full} & {
-        margin-left: 0;
-      }
+      margin-left: calc(
+        var(--c-slider_arrow--size) * var(--c-slider_arrow--offset)
+      );
     }
   }
 
@@ -56,12 +48,9 @@
     right: 0;
 
     [data-slider-arrows='outer'] & {
-      margin-right: -$arrow-icon-size;
-
-      #{selector.$l-main-wrap--full-gap} &,
-      #{selector.$l-main-wrap--full} & {
-        margin-right: 0;
-      }
+      margin-right: calc(
+        var(--c-slider_arrow--size) * var(--c-slider_arrow--offset)
+      );
     }
   }
 }
