--- a/packages/components/form/source/0-base/_input-field-vars.scss
+++ b/packages/components/form/source/0-base/_input-field-vars.scss
@@ -14,3 +14,23 @@ $focus: (
     border-color: var(--color-primary),
   ),
 ) !default;
+
+$box: (
+  ':root': (
+    size: 1rem,
+    border: 1px solid var(--color-primary),
+    background: var(--color-white),
+  ),
+  '.c-checkbox': (
+    border-radius: 0.2rem,
+  ),
+  '.c-radio': (
+    border-radius: 50%,
+  ),
+) !default;
+
+$box-checked: (
+  ':root': (
+    background: var(--color-primary),
+  ),
+) !default;
