--- a/packages/components/form/source/1-atoms/radio/radio.scss
+++ b/packages/components/form/source/1-atoms/radio/radio.scss
@@ -19,17 +19,17 @@ $vars: meta.module-variables(radio-vars);
   }
 
   &__box {
-    @include bourbon.size(var(--c-radio_box--size));
+    @include bourbon.size(var(--g-input_box--size));
     position: relative;
-    flex: 0 0 var(--c-radio_box--size);
-    border: var(--c-radio_box--border);
-    border-radius: 50%;
-    margin-top: calc((var(--line-height-s) - var(--c-radio_box--size)) / 2);
-    background: var(--c-radio_box--background);
+    flex: 0 0 var(--g-input_box--size);
+    border: var(--g-input_box--border);
+    border-radius: var(--g-input_box--border-radius);
+    margin-top: calc((var(--line-height-s) - var(--g-input_box--size)) / 2);
+    background: var(--g-input_box--background);
     transition: 0.2s;
 
     :checked ~ & {
-      background: var(--c-radio_box-checked--background);
+      background: var(--g-input_box-checked--background);
 
       &::after {
         @include bourbon.size(var(--c-radio_checkmark--size));
