feat: add select-field component

--- a/packages/components/form/source/0-base/_input-field-vars.scss
+++ b/packages/components/form/source/0-base/_input-field-vars.scss
@@ -5,6 +5,7 @@ $host: (
     border: 1px solid var(--color-grey-2),
     border-radius: 0.2rem,
     background: var(--color-white),
+    background-disabled: var(--color-black-alpha-1),
     color: var(--color-black),
   ),
 ) !default;
