--- a/packages/components/form/source/1-atoms/text-area/text-area.scss
+++ b/packages/components/form/source/1-atoms/text-area/text-area.scss
@@ -12,7 +12,8 @@
   }
 
   &__input {
-    @include input-field.input-field(textarea);
-    resize: vertical;
+    @include input-field.input-field(textarea) {
+      resize: vertical;
+    }
   }
 }
