--- a/packages/components/form/source/1-atoms/select-field/select-field.scss
+++ b/packages/components/form/source/1-atoms/select-field/select-field.scss
@@ -12,9 +12,7 @@
   }
 
   &__input {
-    @include input-field.input-field(select);
-
-    select {
+    @include input-field.input-field(select) {
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z'/%3E%3C/svg%3E");
       background-repeat: no-repeat;
       background-position: calc(100% - 0.5rem) calc(50% + 1px);
