--- a/packages/components/form/source/0-base/_input-field.scss
+++ b/packages/components/form/source/0-base/_input-field.scss
@@ -1,9 +1,9 @@
 @use 'bourbon/core/bourbon';
 
-@mixin wrapper {
+@mixin wrapper($width: 100%) {
   display: inline-flex;
   font: var(--font-ui-s);
-  width: 100%;
+  width: $width;
 }
 
 @mixin input-field($input-selector: 'input') {
