fix: fix button icon size

--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -3,6 +3,7 @@ $name-: 'c-button';
 $host: (
   '.c-button': (
     font: var(--font-ui-m),
+    icon-size: var(--line-height-m),
     padding: 0.4rem 1.3rem 0.35rem,
     border-color: transparent,
     border-width: 0,
@@ -53,10 +54,12 @@ $host: (
   '.c-button--small': (
     padding: 0.4rem 1rem 0.45rem,
     font: var(--font-ui-s),
+    icon-size: var(--line-height-s),
   ),
   '.c-button--large': (
     padding: 0.45rem 1.7rem 0.5rem,
     font: var(--font-ui-l),
+    icon-size: var(--line-height-l),
   ),
 ) !default;
 
