--- a/packages/components/form/source/1-atoms/checkbox/checkbox.scss
+++ b/packages/components/form/source/1-atoms/checkbox/checkbox.scss
@@ -19,35 +19,18 @@ $vars: meta.module-variables(checkbox-vars);
   }
 
   &__box {
-    @include bourbon.size(var(--g-input_box--size));
-    position: relative;
-    flex: 0 0 var(--g-input_box--size);
-    border: var(--g-input_box--border);
-    border-radius: var(--g-input_box--border-radius);
-    margin-top: calc((var(--line-height-s) - var(--g-input_box--size)) / 2);
-    background: var(--g-input_box--background);
-    transition: 0.2s;
-
-    :checked ~ & {
-      background: var(--g-input_box-checked--background);
-
-      &::after {
-        transform: translate(-50%, -50%) rotate(45deg);
-        position: absolute;
-        top: calc(50% - var(--c-checkbox_checkmark--width));
-        left: 50%;
-        content: '';
-        display: block;
-        width: 0.4em;
-        height: 0.7em;
-        border: solid var(--c-checkbox_checkmark--color);
-        border-width: 0 var(--c-checkbox_checkmark--width)
-          var(--c-checkbox_checkmark--width) 0;
-      }
-    }
-
-    :focus-visible ~ & {
-      box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+    @include input-field.radio-check('.c-checkbox') {
+      transform: translate(-50%, -50%) rotate(45deg);
+      position: absolute;
+      top: calc(50% - var(--c-checkbox_checkmark--width));
+      left: 50%;
+      content: '';
+      display: block;
+      width: 0.4em;
+      height: 0.7em;
+      border: solid var(--c-checkbox_checkmark--color);
+      border-width: 0 var(--c-checkbox_checkmark--width)
+        var(--c-checkbox_checkmark--width) 0;
     }
   }
 
