--- a/packages/components/form/source/1-atoms/radio/radio.scss
+++ b/packages/components/form/source/1-atoms/radio/radio.scss
@@ -19,33 +19,16 @@ $vars: meta.module-variables(radio-vars);
   }
 
   &__box {
-    @include bourbon.size(var(--g-input_box--size));
-    position: relative;
-    flex: 0 0 var(--g-input_box--size);
-    border: var(--g-input_box--border);
-    border-radius: var(--g-input_box--border-radius);
-    margin-top: calc((var(--line-height-s) - var(--g-input_box--size)) / 2);
-    background: var(--g-input_box--background);
-    transition: 0.2s;
-
-    :checked ~ & {
-      background: var(--g-input_box-checked--background);
-
-      &::after {
-        @include bourbon.size(var(--c-radio_checkmark--size));
-        transform: translate(-50%, -50%);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        content: '';
-        display: block;
-        background: var(--c-radio_checkmark--color);
-        border-radius: 50%;
-      }
-    }
-
-    :focus-visible ~ & {
-      box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+    @include input-field.radio-check('.c-radio') {
+      @include bourbon.size(var(--c-radio_checkmark--size));
+      transform: translate(-50%, -50%);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: '';
+      display: block;
+      background: var(--c-radio_checkmark--color);
+      border-radius: 50%;
     }
   }
 
