feat: add form input invalid style

--- a/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
+++ b/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
@@ -24,6 +24,7 @@ $box-hover: (
 $box-focus: (
   '.c-form-check': (
     border-color: var(--color-primary),
+    shadow: 0 0 4px 0,
   ),
 ) !default;
 
