--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -2,7 +2,8 @@ $name-: 'c-form-field';
 
 $host: (
   '.c-form-field': (
-    border: 1px solid var(--color-grey-2),
+    border: 1px solid,
+    border-color: var(--color-grey-2),
     border-radius: 0.2rem,
     background: var(--color-white),
     background-disabled: var(--color-black-alpha-1),
@@ -19,6 +20,7 @@ $hover: (
 $focus: (
   '.c-form-field': (
     border-color: var(--color-primary),
+    shadow: 0 0 4px -1px,
   ),
 ) !default;
 
