feat: add form error messages

--- a/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
+++ b/packages/components/form/source/1-atoms/form-check/_form-check-vars.scss
@@ -8,7 +8,7 @@ $box: (
     background: var(--color-white),
   ),
   '.c-form-check--checkbox': (
-    border-radius: 0.2rem,
+    border-radius: 3px,
   ),
   '.c-form-check--radio': (
     border-radius: 50%,
