--- a/packages/components/form/source/1-atoms/form-check/form-check.scss
+++ b/packages/components/form/source/1-atoms/form-check/form-check.scss
@@ -9,6 +9,13 @@ $vars: meta.module-variables(form-check-vars);
 
 .c-form-check {
   @include input-field.wrapper($width: null);
+  flex-direction: column;
+  align-items: flex-start;
+
+  &__field {
+    position: relative;
+    display: flex;
+  }
 
   &__input {
     @include bourbon.hide-visually;
@@ -75,6 +82,7 @@ $vars: meta.module-variables(form-check-vars);
       }
     }
 
+    .c-form-check-group--is-invalid &,
     .c-form-check__input--is-invalid ~ & {
       --c-form-check_box--border-color: var(--color-error);
       --c-form-check_box-hover--border-color: var(--color-error);
@@ -86,5 +94,13 @@ $vars: meta.module-variables(form-check-vars);
 
   &__label {
     margin-left: 0.5rem;
+  }
+
+  &__invalid-message {
+    margin: 0.25rem 0 0;
+    padding: 0 0.5rem 0.125rem;
+    color: var(--color-white);
+    background: var(--color-error);
+    border-radius: var(--c-form-field--border-radius);
   }
 }
