--- a/packages/components/base/source/1-atoms/input/toggle/_toggle.scss
+++ b/packages/components/base/source/1-atoms/input/toggle/_toggle.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use 'settings/base';
 
 @mixin before-after {
@@ -11,7 +12,7 @@ $toggle__indicator-size: calc(
       base.$toggle__label-border-width * 2
     )}
 );
-$toggle__radius: base.$toggle__label-height / 2;
+$toggle__radius: math.div(base.$toggle__label-height, 2);
 $toggle__checked-x-transform: base.$toggle__label-width -
   base.$toggle__label-height;
 
