--- a/packages/components/base/source/3-organisms/header/header.scss
+++ b/packages/components/base/source/3-organisms/header/header.scss
@@ -1,12 +1,13 @@
+@use "sass:math";
+@use 'sass:meta';
+@use 'bourbon/core/bourbon';
+@use '@kickstartds/core/source/core/breakpoint';
+@use '../../0-base/0-settings/selector';
 @use '../../0-base/1-tools/scss/grid';
 @use '../../0-base/1-tools/scss/helpers';
 @use '../../0-base/1-tools/scss/sizes';
-@use '@kickstartds/core/source/core/breakpoint';
-@use '../../0-base/0-settings/selector';
-@use 'bourbon/core/bourbon';
 @use 'settings/base';
 @use 'settings/global';
-@use 'sass:meta';
 
 $header-variant: 1;
 
@@ -115,7 +116,7 @@ $header-variant: 1;
 
     .icon {
       /* critical:start */
-      @include bourbon.size(base.$nav-main__height/2);
+      @include bourbon.size(math.div(base.$nav-main__height, 2));
       /* critical:end */
     }
 
@@ -137,7 +138,7 @@ $header-variant: 1;
 
       .icon {
         /* critical:start */
-        @include bourbon.size(base.$nav-main__height--s/2);
+        @include bourbon.size(math.div(base.$nav-main__height--s, 2));
         /* critical:end */
       }
     }
