--- a/packages/components/base/source/1-atoms/divider/_divider-vars.scss
+++ b/packages/components/base/source/1-atoms/divider/_divider-vars.scss
@@ -5,4 +5,10 @@ $host: (
     background: var(--color-black-alpha-1),
     height: 1px,
   ),
+  '.c-divider--accent': (
+    background: var(--color-primary-alpha-1),
+  ),
+  '.c-divider--dark': (
+    background: var(--color-white-alpha-1),
+  ),
 ) !default;
