fix: fix mobile visual inbox style
#88

--- a/packages/components/content/source/2-molecules/visual/_visual__content.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__content.scss
@@ -57,6 +57,7 @@
   &--inbox,
   &:only-child {
     /* critical:start */
+    padding: var(--spacing-m);
     // ie fix
     height: var(--c-visual--min-height);
     /* critical:end */
