feat: add more tokens to rich-text & button
#90  #104

--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -3,6 +3,7 @@ $name-: 'c-button';
 $host: (
   '.c-button': (
     font: var(--font-ui-m),
+    font-weight: var(--font-weight-regular),
     icon-size: var(--line-height-m),
     padding: 0.4rem 1.3rem 0.35rem,
     border-color: transparent,
