--- a/packages/components/base/source/1-atoms/rich-text/rich-text.scss
+++ b/packages/components/base/source/1-atoms/rich-text/rich-text.scss
@@ -7,6 +7,8 @@ $vars: meta.module-variables(rich-text-vars);
 
 .c-rich-text {
   font: var(--c-rich-text--font);
+  font-weight: var(--c-rich-text-font-weight);
+  color: var(--c-rich-text-color);
 
   &__align {
     &-center {
