fix: fix rich-text color in teaser & visual

--- a/packages/components/base/source/2-molecules/teaser/teaser.scss
+++ b/packages/components/base/source/2-molecules/teaser/teaser.scss
@@ -16,6 +16,10 @@ $vars: meta.module-variables(teaser-vars);
   overflow: hidden;
   font: var(--c-teaser--font);
 
+  .c-rich-text {
+    color: var(--c-teaser--color);
+  }
+
   &.js-linked {
     transition: box-shadow 0.2s;
 
